--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ test {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
 }
 
 compileKotlin {
